[metadata]
name = trial-osxnotifier
version = 0.2.0
url = https://github.com/Julian/trial-osxnotifier
project_urls =
    Source = https://github.com/Julian/trial-osxnotifier
    Issues = https://github.com/Julian/trial-osxnotifier/issues/
description = A Trial reporter that reports with OS X notifications
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+trial_osxnotifier@GrayVines.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: MacOS
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = twisted.plugins
py_modules = trialosxnotifier
install_requires = 
    pyobjc-core
